model.less scrollable on mobile (fix)

--- a/admin/assets/less/elements/left.less
+++ b/admin/assets/less/elements/left.less
@@ -85,8 +85,8 @@
                             }
                         }
                         a {
-                            font-size: 14px;
-                            line-height: 24px;
+                            font-size: 16px;
+                            line-height: 28px;
                         }
                     }
                     display: none;
