--- a/admin/assets/less/elements/modal.less
+++ b/admin/assets/less/elements/modal.less
@@ -67,7 +67,8 @@
         left: 20px;
         right: 20px;
         margin: auto;
-        top: 10%;
+        top: 8%;
+        padding-bottom: 30px;
     }
     background: fade(@dark, 75%);
     position: fixed;
@@ -75,7 +76,9 @@
     right: 0;
     top: 0;
     bottom: 0;
-    z-index: 100;
+    overflow-x: hidden;
+    overflow-y: auto;
+    z-index: 104;
     .transition(0.2s);
 }
 
